# xcms

./: .env  Cargo.toml  README.md  cert.pem  key.pem
docs/: INFRASTRUCTURE.md  TODOAPP.md  architecture.md  authentication.md  components.md  databse.md
docs/config/: nginx_80  nginx_certbot
ecslib/: Cargo.toml
ecslib/src/: lib.rs  menu.rs  render.rs  ructebuilder.rs  utils.rs
ecslib/src/modules/: meta.rs  meta.rs.html  mod.rs  page.rs.html
ecslib/src/modules/access/: control.rs  group.rs  group_member.rs  key.rs  mod.rs  rule.rs
ecslib/src/modules/email/: build.rs  build.rs.html  build_meta.rs.html
ecslib/src/modules/navigation/: edit.rs.html  empty_frame.rs.html  footer.rs.html  frame.rs.html  list.rs  list.rs.html  mod.rs  sidebar.rs.html  table.rs.html  topbar.rs.html
ecslib/src/modules/project/: add.rs  data.rs  edit.rs  edit.rs.html  list.rs  list.rs.html  mod.rs  register.html  todo.rs  todo.rs.html  todo_list.rs  todo_meta.rs.html  todo_register.rs  todo_register.rs.html
ecslib/src/modules/team/: add.rs  dashboard.rs  dashboard.rs.html  dashboard_meta.rs.html  data.rs  edit.rs  list.rs  mod.rs  select.rs  selector.rs.html
ecslib/src/modules/user/: list.rs  login.rs  login.rs.html  mod.rs  register.rs  register.rs.html  restrict.rs  token.rs
ecspg/: Cargo.toml
ecspg/migrations/00000000000000_diesel_initial_setup/: up.sql
ecspg/migrations/2018-11-16-111600_session_tokens/: down.sql  up.sql
ecspg/migrations/2018-11-19-153422_users/: up.sql
ecspg/migrations/2018-11-20-170408_user_meta/: down.sql  up.sql
ecspg/migrations/2018-12-10-162059_user_pwd/: down.sql  up.sql
ecspg/migrations/2019-02-12-180154_access/: down.sql  up.sql
ecspg/migrations/2019-02-14-180000_ecs/: down.sql  (+1 more)
ecspg/src/: schema.rs
scrambler/: .env  .gitignore  Cargo.toml  README.md
scrambler/src/: add_gen.rs  cli.rs  edit_gen.rs  list_gen.rs  main.rs  mod_gen.rs  typemap.rs  utils.rs
static/: color_dark.css  dashboard.js  emailbuilder.js  fluent-web.js  listing.js  matswitch.7z  matswitch.css  orderlist.js  theme.css  theme.js  todo.js
static/en-UK/: main.ftl
static/hu/: main.ftl
tests/: mod.rs
todo/: Cargo.toml
todo/src/: main.rs
(+4 files in other folders)
