[package]
name = "ecslib"
version = "0.2.3"
authors = ["Andras Mocsary <nobody@reedwolf.com>"]
edition = "2018"

build = "src/ructebuilder.rs"

[dependencies]
actix-web = { version = "0.7.19", features = ["rust-tls"] }
actix-web-httpauth = "0.1.0"
serde = "1.0.89"
bincode = "1.1.2"
dotenv = "0.13.0"
actix = "0.7.9"
futures = "0.1.25"
serde_json = "1.0.39"
serde_derive = "1.0.89"
log = "0.4.6"
pretty_env_logger = "0.3.0"
rustls = { version = "0.14", optional = true }
bytes = "0.4.12"
crc32c = "0.4.0"
actix-diesel-actor = "0.1.2"
url = "1.7.2"
rand = "0.6.5"
validator = "0.8.0"
time = "0.1.42"
argon2rs = "0.2.5"
cookie = "0.11.0"
heck = "0.3.1"
ecspg = { path = "../ecspg" }

[dependencies.diesel]
version = "1.4.2"
features = ["postgres","r2d2","uuid","chrono","serde_json"]

[dependencies.uuid]
version = "0.6.5"
features = ["serde","v4"]

[dependencies.chrono]
version = "0.4.6"
features = ["serde"]

[build-dependencies]
ructe = "0.6"

[features]
# no features by default
default = []
https = ["rustls"]

