[package]
name = "scrambler"
version = "0.1.0"
authors = ["Andras Mocsary <nobody@reedwolf.com>"]
edition = "2018"

[dependencies]
dotenv = "0.13.0"
serde = "1.0.84"
regex = "1.1.0"
clap = "2.32.0"
pinnaculum = { path = "../" }
heck = "0.3.1"

[dependencies.diesel]
version = "1.3.3"
features = ["postgres"]
